--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "recharts": "^3.5.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "@types/recharts": "^1.8.29",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
