--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@arelstone/react-native-swipe-button": "^0.3.0",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.4.4",
@@ -20,6 +21,7 @@
     "dayjs": "^1.11.19",
     "expo": "~54.0.29",
     "expo-blur": "~15.0.8",
+    "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.12",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
@@ -44,7 +46,8 @@
     "react-native-ui-datepicker": "^3.1.2",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
-    "recharts": "^3.5.1"
+    "recharts": "^3.5.1",
+    "tamagui": "^1.141.5"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
